Fix pull-quote spacing

--- a/assets/sass/patterns/molecules/pull-quote.scss
+++ b/assets/sass/patterns/molecules/pull-quote.scss
@@ -6,7 +6,7 @@
   background: url("../img/icons/quote-start.svg") 0 #{$blg-space-large-in-px - 24 - 14}px no-repeat, linear-gradient(transparent, transparent);
   @include nospace();
   @include blg-spacing("top", "large");
-  @include blg-spacing("top", "medium");
+  @include blg-spacing("bottom", "medium");
 
   p {
     @include pullquote-typeg();
